<resources>
    <string name="app_name">Parking</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register_now">Register now!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="already_registered">Already registered?</string>
    <string name="register">Register!</string>
    <string name="skopje">Skopje</string>
    <string name="bitola">Bitola</string>
    <string name="kumanovo">Kumanovo</string>
    <string name="gevgelija">Gevgelija</string>
    <string name="next">next</string>
    <string-array name="hours">
        <item>07:00 - 08:00</item>
        <item>08:00 - 09:00</item>
        <item>09:00 - 10:00</item>
        <item>10:00 - 11:00</item>
        <item>11:00 - 12:00</item>
        <item>12:00 - 13:00</item>
        <item>13:00 - 14:00</item>
        <item>14:00 - 15:00</item>
        <item>15:00 - 16:00</item>
        <item>16:00 - 17:00</item>
        <item>17:00 - 18:00</item>
        <item>18:00 - 19:00</item>
        <item>19:00 - 20:00</item>
        <item>20:00 - 21:00</item>
        <item>21:00 - 22:00</item>

    </string-array>
</resources>