<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="wrap_content"
        android:layout_marginTop="160dp"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/username"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/edittext_confpassword"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/password"
        android:hint="@string/confirm_password" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_margin="20dp"
        android:layout_height="40dp"
        android:text="@string/login"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/already_registered" />

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingLeft="10dp"
            android:text="@string/login"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>